--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
 	"author": "Aakash Jha",
 	"license": "MIT",
 	"dependencies": {
+		"@hapi/joi": "17.1.1",
 		"axios": "0.21.1",
+		"bcryptjs": "2.4.3",
 		"cors": "2.8.5",
 		"dotenv": "10.0.0",
 		"ejs": "3.1.6",
 		"express": "4.17.1",
+		"joi": "17.4.0",
+		"jsonwebtoken": "8.5.1",
 		"mongoose": "5.12.13",
 		"sass": "1.34.1"
 	},
